Fixes vh and vw issues on mobile. Adds mixin for calculating vh and vw

--- a/src/assets/css/mainstyles.sass
+++ b/src/assets/css/mainstyles.sass
@@ -25,6 +25,16 @@ $logo-font: "Exo", sans-serif
 $icon-color: #fffdf7
 $form-background: rgba(255, 255, 255, 0.35)
 
+@mixin no-scroll
+    height: calc(var(--vh, 1vh) * 100)
+    width: calc(var(--vw, 1vw) * 100)
+    overflow: hidden
+    overflow: -moz-hidden-unscrollable
+
+@mixin no-x-scroll
+    width: calc(var(--vw, 1vw) * 100)
+    overflow-x: hidden
+
 h1, h2, 
     font-family: $heading-font
     text-transform: uppercase
@@ -62,6 +72,7 @@ a:hover
 
 body
     background-color: #005B52
+    box-sizing: border-box
 
 .hero-banner--mobile
     background-image: url("./../MobileHeroBanner.jpg")
@@ -72,8 +83,11 @@ body
 .login-register--container, .hero-banner--mobile
     background-repeat: no-repeat
     background-size: cover
-    width: 100vw
-    height: 100vh
+    @include no-scroll
+
+.aboutUs_banner, .matching--container
+    @include no-x-scroll
+    
 
 // Padding, margin, display
 
